--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <mat-toolbar>
-  <h1>Task Management System</h1>
+  <h1><a href="/">Task Management System</a></h1>
+  <h2><a href="/about">About</a></h2>
 </mat-toolbar>
 <main>
   <!-- outlet displays what the route sends -->
